# cripto_scanner_cpp

./: .$scanner.drawio.bkp  .gitignore  871501213.proj.DotSettings  CMakeLists.txt  README.md  scanner.drawio  test
include/class/: BaseCriptoStock.h  BinanceImpl.h  BybitImpl.h  OkxImpl.h  Scanner.h  Wallet.h
include/interface/: ICriptoStock.h
include/request/: subscribe.h
include/structure/: Path.h  PathNode.h  Symbol.h
include/utils/: request.h  shared.h
old_src/: graph.cpp  graph.h  json.cpp  json.h  main.cpp  websocket.cpp  websocket.h
src/: main.cpp
src/class/: BaseCriptoStock.cpp  BinanceImpl.cpp  BybitImpl.cpp  OkxImpl.cpp  Scanner.cpp  Wallet.cpp
src/intefrace/: ICriptoStock.cpp
src/structure/: Symbol.cpp
src/utils/: request.cpp  shared.cpp
